@@ -1,3 +1,9 @@
+2008-03-03  Andrew John Hughes  <gnu_andrew@member.fsf.org>
+
+	PR classpath/28664
+	* native/jni/Makefile.am: Check CREATE_GMPBI_LIBRARY
+	and only compile GMP libraries if set.
+	
 2008-03-02  Mark Wielaard  <mark@klomp.org>
 
 	* native/jni/Makefile.am (DIST_SUBDIRS): Add java-math.
